# clienter_assignment

./: .gitignore
backend/: Dockerfile  main.py  pyproject.toml
backend/src/datasets/: clean_data.ipynb  sales_data_sample_cleaned.csv
backend/src/model/: query_data.py  sales_data.db  save_data.py
backend/src/services/: gemini_service.py
frontend/: Dockerfile  package.json
frontend/src/: App.js
frontend/src/components/: QueryForm.jsx  QueryResult.jsx
